--- a/package.json
+++ b/package.json
@@ -1,15 +1,15 @@
 {
   "name": "redux-typed-actions",
   "description": "An approach to type Redux actions and their payload and statically type checking them in Typescript",
-  "version": "0.1.4",
+  "version": "0.1.5",
   "license": "MIT",
   "main": "lib/bundles/redux-typed-actions.umd.js",
   "module": "lib/redux-typed-actions.es5.js",
   "es2015": "lib/redux-typed-actions.js",
   "typings": "lib/redux-typed-actions.d.ts",
   "scripts": {
-    "prepublish": "npm run lint && npm run test && npm run build",
-    "lint": "tslint -p tsconfig.json --type-check",
+    "prepublishOnly": "npm run lint && npm run test && npm run build",
+    "lint": "tslint -p tsconfig.json",
     "pretest": "tsc -p src",
     "test": "mocha --reporter spec --colors \"build/**/*.spec.js\"",
     "build": "tsb"
@@ -37,7 +37,7 @@
     "@types/node": "^8.0.46",
     "chai": "^4.1.2",
     "mocha": "^4.0.1",
-    "tslint": "^5.7.0",
-    "typescript-library-bundler": "~0.1.0"
+    "tslint": "^5.8.0",
+    "typescript-library-bundler": "^0.1.6"
   }
 }
